rs/macros/core/tests/snapshots/sails_type__enum_basic.snap
---
source: rs/macros/core/tests/sails_type.rs
expression: result
---
#[derive(
    sails::scale_codec::Encode,
    sails::scale_codec::Decode,
    sails::type_info::TypeInfo,
    sails::ReflectHash
)]
#[codec(crate = sails::scale_codec)]
#[type_info(crate = sails::type_info)]
#[reflect_hash(crate = sails)]
pub enum MyEnum {
    A,
    B(u32),
    C { x: String },
}
