rs/macros/core/tests/snapshots/sails_type__no_reflect_hash_flag.snap
---
source: rs/macros/core/tests/sails_type.rs
expression: result
---
#[derive(
    sails::scale_codec::Encode,
    sails::scale_codec::Decode,
    sails::type_info::TypeInfo
)]
#[codec(crate = sails::scale_codec)]
#[type_info(crate = sails::type_info)]
pub struct MyType {
    pub a: u32,
}
