rs/macros/core/tests/snapshots/sails_type__struct_with_generics.snap
---
source: rs/macros/core/tests/sails_type.rs
expression: result
---
#[derive(
    sails::scale_codec::Encode,
    sails::scale_codec::Decode,
    sails::type_info::TypeInfo,
    sails::ReflectHash
)]
#[codec(crate = sails::scale_codec)]
#[type_info(crate = sails::type_info)]
#[reflect_hash(crate = sails)]
pub struct MyType<T: Clone>
where
    T: core::fmt::Debug,
{
    pub value: T,
}
